<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".Authotp"
    android:background="@drawable/back10">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <ImageView
          android:layout_width="130dp"
          android:layout_height="130dp"
          android:layout_marginTop="80dp"
          android:src="@drawable/plane"
          android:contentDescription="@string/app_name"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="OTP Verification"
          android:textSize="20dp"
          android:textStyle="bold"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/entermobile"
          android:textSize="20dp"
          android:layout_marginTop="20dp"/>

      <LinearLayout
          android:layout_marginTop="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_marginStart="40dp"
          android:layout_marginEnd="40dp">
         <TextView
             android:id="@+id/codepick"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:textStyle="bold"
             android:text="@string/code"/>
          <com.google.android.material.textfield.TextInputLayout
              android:id="@+id/Phone_no"
              android:layout_width="220dp"
              android:layout_height="wrap_content"
              app:boxCornerRadiusTopStart="15dp"
              app:layout_constraintHorizontal_bias=".8"
              app:boxCornerRadiusTopEnd="15dp"
              app:hintTextColor="@color/teal_700"
              app:hintTextAppearance="@style/HintText"
              app:boxStrokeColor="@color/maroon"
              app:endIconMode="clear_text"
              style="@style/LoginTextInputLayoutStyle"
              app:counterOverflowTextColor="@color/maroon"
              app:counterEnabled="true"
              app:counterMaxLength="10"
              app:startIconDrawable="@drawable/contact_phone_24"
              app:counterTextAppearance="@style/CounterText"
              app:layout_constraintVertical_bias="0.3">
              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/Phone_no_ed"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:inputType="number"
                  android:textStyle="bold"
                  android:imeOptions="actionDone"
                  android:hint="@string/enter_phone_no"/>
          </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>
      <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
      <TextView
          android:layout_marginTop="10dp"
          android:id="@+id/generateotp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintVertical_bias=".42"
          android:layout_marginRight="40dp"
          android:layout_marginLeft="40dp"
          android:elevation="10dp"
          android:translationZ="10dp"
          android:stateListAnimator="@null"
          android:text="@string/generate_otp"
          android:padding="8dp"
          android:gravity="center"
          style="@style/ButtonStyle" />
      <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:visibility="gone"/>
      </FrameLayout>
  </LinearLayout>



</ScrollView>