<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notuse.Registeractivity"
    android:background="@drawable/back10">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:alpha="0.9"
            android:text="Enter these basic details for Register further to\nbecome member of E-Sathi Family"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="35dp"
            android:src="@drawable/profileuser"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#FFFFFF"
            app:hintTextColor="@color/teal_700"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/maroon"
            app:endIconMode="clear_text"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            style="@style/LoginTextInputLayoutStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1"
            app:counterOverflowTextColor="@color/maroon"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:startIconDrawable="@drawable/person_24"
            app:counterTextAppearance="@style/CounterText"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="text"
                android:background="@drawable/round_corner"
                android:hint="@string/name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#FFFFFF"
            app:hintTextColor="@color/teal_700"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/maroon"
            app:endIconMode="password_toggle"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            style="@style/LoginTextInputLayoutStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:counterOverflowTextColor="@color/maroon"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:startIconDrawable="@drawable/person_24"
            app:counterTextAppearance="@style/CounterText"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:background="@drawable/round_corner"
                android:hint="@string/pass"/>
        </com.google.android.material.textfield.TextInputLayout>

     <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:text="@string/select_profile_image"
            android:textSize="15sp"
            android:textStyle="bold"
            android:alpha=".7"
            android:onClick="Select"
            android:background="@drawable/ripple"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#FFFFFF"
            app:hintTextColor="@color/teal_700"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/maroon"
            app:endIconMode="clear_text"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            style="@style/LoginTextInputLayoutStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            app:counterOverflowTextColor="@color/maroon"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:startIconDrawable="@drawable/email"
            app:counterTextAppearance="@style/CounterText"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:background="@drawable/round_corner"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#FFFFFF"
            app:hintTextColor="@color/teal_700"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/maroon"
            app:endIconMode="clear_text"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            style="@style/LoginTextInputLayoutStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:counterOverflowTextColor="@color/maroon"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:startIconDrawable="@drawable/phone"
            app:counterTextAppearance="@style/CounterText"
            android:layout_marginTop="25dp"
            app:layout_constraintVertical_bias="0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/number_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="text"
                android:background="@drawable/round_corner"
                android:hint="@string/phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias=".42"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:elevation="10dp"
            android:onClick="submit"
            android:translationZ="10dp"
            android:stateListAnimator="@null"
            android:text="@string/register"
            android:padding="8dp"
            android:gravity="center"
            style="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number" />

        <TextView
            android:id="@+id/gologin"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:alpha="0.9"
            android:onClick="gotologin"
            android:gravity="center_horizontal"
            android:text="Already Register Go to login!..."
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regbtn"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>