<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notuse.Loginactivity"
    android:background="@drawable/back10">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:alpha="0.9"
            android:textStyle="bold"
            android:text="Enter your details to login"
            android:textSize="30sp"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emaillogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#FFFFFF"
            app:hintTextColor="@color/teal_700"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/maroon"
            app:endIconMode="clear_text"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            style="@style/LoginTextInputLayoutStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvlogin"
            app:counterOverflowTextColor="@color/maroon"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:startIconDrawable="@drawable/email"
            app:counterTextAppearance="@style/CounterText"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emaillogin_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:background="@drawable/round_corner"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#FFFFFF"
            app:hintTextColor="@color/teal_700"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/maroon"
            app:endIconMode="password_toggle"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            style="@style/LoginTextInputLayoutStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emaillogin"
            app:counterOverflowTextColor="@color/maroon"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:startIconDrawable="@drawable/person_24"
            app:counterTextAppearance="@style/CounterText"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passlog_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:background="@drawable/round_corner"
                android:hint="@string/pass"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="#FFFFFF"
            app:hintTextColor="@color/teal_700"
            app:hintTextAppearance="@style/HintText"
            app:boxStrokeColor="@color/maroon"
            app:endIconMode="password_toggle"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            style="@style/LoginTextInputLayoutStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passlog"
            app:counterOverflowTextColor="@color/maroon"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:startIconDrawable="@drawable/person_24"
            app:counterTextAppearance="@style/CounterText"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passconfirm_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:background="@drawable/round_corner"
                android:hint="@string/passconfirm"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias=".42"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:elevation="10dp"
            android:onClick="submitlogin"
            android:translationZ="10dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:padding="8dp"
            android:gravity="center"
            style="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passconfirm" />

        <TextView
            android:id="@+id/goregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:alpha="0.9"
            android:onClick="gotoregister"
            android:gravity="center_horizontal"
            android:text="Dont have login Id Register user!..."
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.343"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logbtn"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>